--- a/config/nginx.conf.tmpl
+++ b/config/nginx.conf.tmpl
@@ -43,8 +43,8 @@ http {
 
   gzip on;
   gzip_min_length 1k;
-  # gzip_buffer 4 16k;
-  gzip_comp_level 2;
+  gzip_buffers 4 16k;
+  gzip_comp_level 6;
   gzip_types text/plain application/x-javascript text/css application/xml;
 
   server {
