--- a/config/nginx.conf.tmpl
+++ b/config/nginx.conf.tmpl
@@ -42,10 +42,13 @@ http {
   lua_code_cache on;
 
   gzip on;
+  gzip_vary on;
   gzip_min_length 1k;
   gzip_buffers 4 16k;
-  gzip_comp_level 6;
-  gzip_types text/plain application/x-javascript text/css application/xml;
+  gzip_comp_level 3;
+  gzip_http_version 1.1;
+  gzip_types text/plain application/json application/x-javascript application/javascript text/css text/javascript application/xml;
+  gzip_disable "MSIE [1-6]\.";
 
   server {
     listen ##PORT##;
