--- a/config/nginx.conf.tmpl
+++ b/config/nginx.conf.tmpl
@@ -63,6 +63,23 @@ http {
 
     include /etc/nginx/conf.d/*.conf;
 
+    location ~* \.(js|css|gif|png|jpg|jpeg)$ {
+      proxy_pass ##PROXY_PASS##;
+
+      proxy_set_header X-Forwarded-Host $host;
+      proxy_set_header Upgrade		$http_upgrade;
+      proxy_set_header Connection	"upgrade";
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_hide_header X-Powered-By;
+      
+      # Do not pass Authorization header to destination
+      proxy_set_header Authorization "";
+
+      add_header Cache-Control "public, max-age: 31536000";
+    }
+
     location / {
       access_by_lua_file /usr/local/openresty/lualib/oauth/guard.lua;
 
