:sparkles:(debug): add debug logic
- 1 add mode: development and production
- 2 add debug: mode != production
- 3 add debug logic
  - error in debug: ngx.say
  - error in production: ngx.log
- 4 config more collected: cookie_fields + cookie_token

--- a/config/nginx.conf.tmpl
+++ b/config/nginx.conf.tmpl
@@ -8,6 +8,9 @@ events {
   worker_connections 1024;
 }
 
+# Mode: development or production
+env MODE;
+
 # @1 AUTHORIZE INFO
 env CLIENT_ID;
 env REDIRECT_URI;
