:sparkles:(providers): support extendable provider config
- extendable provider config in oauth.user token field
  - in header
    - supported
    - such as: (Github) { Authorization: 'Bearer {Token}' }
  - in query
    - supported
    - such as: (Gitee) { access_token: Token }
  - in body
    - @TODO this should dymamic request method

- nginx env and openresty config
  - USER_INFO_HEADER: user_info_header
  - USER_INFO_QUERY: user_info_query
  - USER_INFO_BODY: user_info_body

--- a/config/nginx.conf.tmpl
+++ b/config/nginx.conf.tmpl
@@ -32,6 +32,12 @@ env GRANT_TYPE; # using to get access token, default: authorization_code
 #     header: { Authorization: Bearer Token; }
 env USER_INFO_URL;
 
+# @2.3.1 Extanble Token in Header, Query, Body
+env USER_INFO_HEADER;
+env USER_INFO_QUERY;
+env USER_INFO_BODY;
+
+
 # @3 USER FIELD
 env USER_USERNAME;
 env USER_NICKNAME;
