:sparkles:(core): suport get token with data in body and query

--- a/config/nginx.conf.tmpl
+++ b/config/nginx.conf.tmpl
@@ -28,6 +28,10 @@ env TOKEN_URL;
 env CLIENT_SECRET;
 env GRANT_TYPE; # using to get access token, default: authorization_code
 
+# @2.2.1
+env TOKEN_DATA_IN_BODY;
+env TOKEN_DATA_IN_QUERY;
+
 # @2.3 GET USER_INFO_URL
 #     header: { Authorization: Bearer Token; }
 env USER_INFO_URL;
