:sparkles:(providers): github provider is ok

--- a/config/nginx.conf.tmpl
+++ b/config/nginx.conf.tmpl
@@ -11,6 +11,9 @@ events {
 # Mode: development or production
 env MODE;
 
+# Provider
+env PROVIDER;
+
 # @1 AUTHORIZE INFO
 env CLIENT_ID;
 env REDIRECT_URI;
