--- a/packages/core/config/nginx.conf.tmpl
+++ b/packages/core/config/nginx.conf.tmpl
@@ -89,7 +89,7 @@ http {
     client_max_body_size ##CLIENT_MAX_BODY_SIZE##;
     proxy_read_timeout ##PROXY_READ_TIMEOUT##;
 
-    location ~* \.(js|css|gif|png|jpg|jpeg)$ {
+    location ~* \.(js|css|gif|png|jpg|jpeg|svg)$ {
       proxy_pass ##PROXY_PASS##;
 
       proxy_set_header X-Forwarded-Host $host;
