--- a/packages/core/config/nginx.conf.tmpl
+++ b/packages/core/config/nginx.conf.tmpl
@@ -103,7 +103,7 @@ http {
       # Do not pass Authorization header to destination
       proxy_set_header Authorization "";
 
-      add_header Cache-Control "public, max-age: 31536000";
+      add_header Cache-Control "public, max-age=31536000";
       expires 1y;
     }
 
