--- a/packages/core/config/nginx.conf.tmpl
+++ b/packages/core/config/nginx.conf.tmpl
@@ -99,12 +99,31 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
       proxy_hide_header X-Powered-By;
+      proxy_hide_header Cache-Control;
       
       # Do not pass Authorization header to destination
       proxy_set_header Authorization "";
 
       add_header Cache-Control "public, max-age=31536000";
       expires 1y;
+    }
+
+    # @TODO
+    location ~* \/manifest\.?([^\.]*?)\.(js|json)$ {
+      proxy_pass ##PROXY_PASS##;
+
+      proxy_set_header X-Forwarded-Host $host;
+      proxy_set_header Upgrade		$http_upgrade;
+      proxy_set_header Connection	"upgrade";
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_hide_header X-Powered-By;
+      proxy_hide_header Cache-Control;
+      
+      # Do not pass Authorization header to destination
+      add_header Cache-Control "public, max-age=60";
+      proxy_set_header Authorization "";
     }
 
     location / {
