--- a/packages/core/config/nginx.conf.tmpl
+++ b/packages/core/config/nginx.conf.tmpl
@@ -124,6 +124,9 @@ http {
       # Do not pass Authorization header to destination
       add_header Cache-Control "public, max-age=60";
       proxy_set_header Authorization "";
+
+      # Guard By
+      add_header Guard-By whatwewant/openresty-oauth2.0;
     }
 
     location / {
@@ -136,6 +139,7 @@ http {
       proxy_set_header Connection	"upgrade";
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $schema;
       proxy_set_header Host $host;
       proxy_hide_header X-Powered-By;
       
