--- a/packages/core/config/nginx.conf.tmpl
+++ b/packages/core/config/nginx.conf.tmpl
@@ -139,7 +139,7 @@ http {
       proxy_set_header Connection	"upgrade";
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $schema;
+      proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header Host $host;
       proxy_hide_header X-Powered-By;
       
