--- a/packages/core/config/nginx.conf.tmpl
+++ b/packages/core/config/nginx.conf.tmpl
@@ -89,6 +89,9 @@ http {
     client_max_body_size ##CLIENT_MAX_BODY_SIZE##;
     proxy_read_timeout ##PROXY_READ_TIMEOUT##;
 
+    # avoid HTTP 411 Length Required
+    chunked_transfer_encoding on;
+
     location ~* \.(js|css|gif|png|jpg|jpeg|svg)$ {
       proxy_pass ##PROXY_PASS##;
 
