:sparkles:(nginx): allow authorization to backend, such as portainer

--- a/packages/core/config/nginx.conf.tmpl
+++ b/packages/core/config/nginx.conf.tmpl
@@ -147,7 +147,7 @@ http {
       proxy_hide_header X-Powered-By;
       
       # Do not pass Authorization header to destination
-      proxy_set_header Authorization "";
+      # proxy_set_header Authorization "";
     }
 
     location /_oauth/ {
