feat(core): support env TOKEN_DATA_IN_BODY_CONTENT_TYPE to support get token use application/x-www-form-urlencoded data type

--- a/packages/core/config/nginx.conf.tmpl
+++ b/packages/core/config/nginx.conf.tmpl
@@ -36,6 +36,7 @@ env GRANT_TYPE; # using to get access token, default: authorization_code
 
 # @2.2.1
 env TOKEN_DATA_IN_BODY;
+env TOKEN_DATA_IN_BODY_CONTENT_TYPE;
 env TOKEN_DATA_IN_QUERY;
 
 # @2.3 GET USER_INFO_URL
